Updated graph generation, added Naor's LP-rounding baseline

--- a/notebooks/exp_box_plots.ipynb
+++ b/notebooks/exp_box_plots.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda:2' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
     "print('Using device:', device)\n",
     "\n",
@@ -90,15 +90,16 @@
     }
    ],
    "source": [
-    "rng = np.random.default_rng(seed=0)\n",
-    "num_trials = 40\n",
+    "rng = np.random.default_rng(seed=50)\n",
+    "num_trials = 100\n",
     "batch_size = 500\n",
     "node_configs = EXPERIMENT_BASE_TESTING_REGIMES\n",
     "graph_configs = MAIN_TESTING_GRAPH_CONFIGS\n",
     "baselines_kwargs = {\n",
     "    'greedy': {},\n",
     "    'greedy_t': {'threshold': 0.35},\n",
-    "    'lp_rounding': {}\n",
+    "    'lp_rounding': {},\n",
+    "    'naor_lp_rounding': {}\n",
     "}\n",
     "\n",
     "data = {node_config: {} for node_config in node_configs}\n",
@@ -122,7 +123,7 @@
     "                batch_size=batch_size,\n",
     "                rng=rng,\n",
     "                num_realizations=5,\n",
-    "                baselines=['greedy', 'greedy_t', 'lp_rounding'],\n",
+    "                baselines=['greedy', 'greedy_t', 'lp_rounding', 'naor_lp_rounding'],\n",
     "                **baselines_kwargs\n",
     "            )\n",
     "\n",
@@ -148,6 +149,58 @@
     "\n",
     "_box_plots(results, lambda graph_type: f\"GNN2_classify_{graph_type} {node_config[1]}x{node_config[0]}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from algorithms import greedy, offline_opt\n",
+    "from util import _flip_coins\n",
+    "\n",
+    "rng = np.random.default_rng(seed=0)\n",
+    "instances = sample_instances(\n",
+    "    *(30, 10),\n",
+    "    100,\n",
+    "    rng,\n",
+    "    {},\n",
+    "    **MAIN_TESTING_GRAPH_CONFIGS[1]\n",
+    ")\n",
+    "vals = []\n",
+    "for instance in instances:\n",
+    "    vals2 = []\n",
+    "    for _ in range(5):\n",
+    "        coin_flips = _flip_coins(instance[1], rng)\n",
+    "        vals2.append(greedy(instance, coin_flips)[1] / offline_opt(instance[0], coin_flips)[1])\n",
+    "    vals.append(np.nanmean(vals2))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.min(vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instances[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
