--- a/notebooks/exp_regime_generalization.ipynb
+++ b/notebooks/exp_regime_generalization.ipynb
@@ -38,7 +38,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda:7' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
     "print('Using device:', device)"
    ]
@@ -156,14 +156,15 @@
    "source": [
     "seed = 0\n",
     "rng = np.random.default_rng(seed)\n",
-    "num_trials = 2#100\n",
-    "batch_size = 500 \n",
+    "num_trials = 60#100\n",
+    "batch_size = 1000 \n",
     "graph_configs = ALL_TESTING_GRAPH_CONFIGS\n",
-    "node_configs = EXPERIMENT_META_REGIMES[:2]\n",
+    "node_configs = [(x, 16) for x in np.arange(8, 65, 8)] #EXPERIMENT_META_REGIMES[:2]\n",
     "baselines_kwargs = {\n",
     "    'greedy': {},\n",
     "    'greedy_t': {'threshold': 0.35},\n",
-    "    'lp_rounding': {}\n",
+    "    'lp_rounding': {},\n",
+    "    'naor_lp_rounding': {}\n",
     "}\n",
     "\n",
     "regimes = [x/y for (x,y) in node_configs]\n",
@@ -175,6 +176,7 @@
     "    \"greedy\": [],\n",
     "    \"greedy_t\": [],\n",
     "    \"lp_rounding\": [],\n",
+    "    \"naor_lp_rounding\": [],\n",
     "    \"meta_threshold\": []\n",
     "}\n",
     "\n",
@@ -203,26 +205,27 @@
     "            batch_size=batch_size,\n",
     "            rng=rng,\n",
     "            num_realizations=1,\n",
-    "            baselines=['greedy', 'greedy_t', 'lp_rounding'],\n",
+    "            baselines=['greedy', 'greedy_t', 'lp_rounding', 'naor_lp_rounding'],\n",
     "            **baselines_kwargs\n",
     "        )\n",
     "        \n",
-    "        rng = np.random.default_rng(seed)\n",
-    "        threshold_crs, _ = evaluate_model(\n",
-    "            meta_model=None,\n",
-    "            meta_model_type='threshold',\n",
-    "            base_models=[GNN1, GNN2],\n",
-    "            instances=instances,\n",
-    "            batch_size=batch_size,\n",
-    "            rng=rng,\n",
-    "            num_realizations=5\n",
-    "        )\n",
+    "        # rng = np.random.default_rng(seed)\n",
+    "        # threshold_crs, _ = evaluate_model(\n",
+    "        #     meta_model=None,\n",
+    "        #     meta_model_type='threshold',\n",
+    "        #     base_models=[GNN1, GNN2],\n",
+    "        #     instances=instances,\n",
+    "        #     batch_size=batch_size,\n",
+    "        #     rng=rng,\n",
+    "        #     num_realizations=5\n",
+    "        # )\n",
     "\n",
     "        data['meta_gnn'].append(crs['learned'])\n",
     "        data['greedy'].append(crs['greedy'])\n",
     "        data['greedy_t'].append(crs['greedy_t'])\n",
     "        data['lp_rounding'].append(crs['lp_rounding'])\n",
-    "        data['meta_threshold'].append(threshold_crs['learned'])\n",
+    "        data['naor_lp_rounding'].append(crs['naor_lp_rounding'])\n",
+    "        # data['meta_threshold'].append(threshold_crs['learned'])\n",
     "    \n",
     "    upload_meta_experiment(graph_str, data)"
    ]
@@ -244,11 +247,36 @@
     "_plot_meta_ratios(\n",
     "    regimes,\n",
     "    results,\n",
-    "    ['meta_gnn', 'greedy', 'greedy_t', 'lp_rounding'],\n",
+    "    ['meta_gnn', 'greedy', 'greedy_t', 'lp_rounding', 'naor_lp_rounding'],\n",
     "    lambda graph_type: graph_type,\n",
     "    confidence = 0.95\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = load_meta_experiments(graph_configs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regimes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
