Parallelized LP computations

--- a/notebooks/exp_regime_generalization.ipynb
+++ b/notebooks/exp_regime_generalization.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('..')\n"
+    "os.chdir('..')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyTorch has version 2.0.0+cu117\n",
-      "Using device: cuda:7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,46 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'graph_type': 'ER', 'p': 0.25, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'ER', 'p': 0.25, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'ER', 'p': 0.5, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'ER', 'p': 0.5, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'ER', 'p': 0.75, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'ER', 'p': 0.75, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'BA', 'ba_param': 4, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'BA', 'ba_param': 4, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'BA', 'ba_param': 6, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'BA', 'ba_param': 6, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'BA', 'ba_param': 8, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'BA', 'ba_param': 8, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'GEOM', 'q': 0.15, 'd': 2, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'GEOM', 'q': 0.15, 'd': 2, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'GEOM', 'q': 0.25, 'd': 2, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'GEOM', 'q': 0.25, 'd': 2, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'GEOM', 'q': 0.5, 'd': 2, 'weighted': True} (8, 16)\n",
-      "{'graph_type': 'GEOM', 'q': 0.5, 'd': 2, 'weighted': True} (12, 16)\n",
-      "{'graph_type': 'OSMNX', 'location': 'Piedmont, California, USA'} (8, 16)\n",
-      "{'graph_type': 'OSMNX', 'location': 'Piedmont, California, USA'} (12, 16)\n",
-      "{'graph_type': 'OSMNX', 'location': 'Fremont, California, USA'} (8, 16)\n",
-      "{'graph_type': 'OSMNX', 'location': 'Fremont, California, USA'} (12, 16)\n",
-      "{'graph_type': 'GM'} (8, 16)\n",
-      "{'graph_type': 'GM'} (12, 16)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seed = 0\n",
     "rng = np.random.default_rng(seed)\n",
-    "num_trials = 60#100\n",
-    "batch_size = 1000 \n",
-    "graph_configs = ALL_TESTING_GRAPH_CONFIGS\n",
+    "num_trials = 100#100\n",
+    "batch_size = 500\n",
+    "graph_configs = ALL_TESTING_GRAPH_CONFIGS[-1:]\n",
     "node_configs = [(x, 16) for x in np.arange(8, 65, 8)] #EXPERIMENT_META_REGIMES[:2]\n",
     "baselines_kwargs = {\n",
     "    'greedy': {},\n",
@@ -194,7 +154,6 @@
     "            args.__dict__,\n",
     "            **graph_config\n",
     "        )\n",
-    "\n",
     "\n",
     "        rng = np.random.default_rng(seed)\n",
     "        crs, _ = evaluate_model(\n",
@@ -239,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,22 +220,6 @@
    "source": [
     "data = load_meta_experiments(graph_configs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regimes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
