Added detailed timing info, removed duplicated GNN assignment

--- a/notebooks/exp_regime_generalization.ipynb
+++ b/notebooks/exp_regime_generalization.ipynb
@@ -117,9 +117,9 @@
     "seed = 0\n",
     "rng = np.random.default_rng(seed)\n",
     "num_trials = 100#100\n",
-    "batch_size = 500\n",
-    "graph_configs = ALL_TESTING_GRAPH_CONFIGS[-1:]\n",
-    "node_configs = [(x, 16) for x in np.arange(8, 65, 8)] #EXPERIMENT_META_REGIMES[:2]\n",
+    "batch_size = 25\n",
+    "graph_configs = ALL_TESTING_GRAPH_CONFIGS[1:2]\n",
+    "node_configs = [(400, 200)] #EXPERIMENT_META_REGIMES[:2]\n",
     "baselines_kwargs = {\n",
     "    'greedy': {},\n",
     "    'greedy_t': {'threshold': 0.35},\n",
@@ -146,7 +146,6 @@
     "\n",
     "    for i, node_config in enumerate(node_configs):\n",
     "        print(graph_config, node_config)\n",
-    "\n",
     "        instances = sample_instances(\n",
     "            *node_config,\n",
     "            num_trials,\n",
@@ -157,13 +156,13 @@
     "\n",
     "        rng = np.random.default_rng(seed)\n",
     "        crs, _ = evaluate_model(\n",
-    "            meta_model=META_GNN,\n",
+    "            meta_model=None,\n",
     "            meta_model_type='gnn',\n",
-    "            base_models=[GNN1, GNN2],\n",
+    "            base_models=[GNN2],\n",
     "            instances=instances,\n",
     "            batch_size=batch_size,\n",
     "            rng=rng,\n",
-    "            num_realizations=1,\n",
+    "            num_realizations=2,\n",
     "            baselines=['greedy', 'greedy_t', 'lp_rounding', 'naor_lp_rounding'],\n",
     "            **baselines_kwargs\n",
     "        )\n",
@@ -187,6 +186,17 @@
     "        # data['meta_threshold'].append(threshold_crs['learned'])\n",
     "    \n",
     "    upload_meta_experiment(graph_str, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in data.keys():\n",
+    "    if key != 'num_trials' and key != 'meta_threshold':\n",
+    "        print(key, np.mean(data[key]))"
    ]
   },
   {
