--- a/notebooks/exp_box_plots.ipynb
+++ b/notebooks/exp_box_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -39,18 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyTorch has version 2.0.0+cu117\n",
-      "Using device: cuda:2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device('cuda:2' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
@@ -75,20 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(30, 10) {'graph_type': 'ER', 'p': 0.5, 'weighted': True}\n",
-      "(30, 10) {'graph_type': 'GEOM', 'q': 0.25, 'd': 2, 'weighted': True}\n",
-      "(30, 10) {'graph_type': 'OSMNX', 'location': 'Fremont, California, USA'}\n",
-      "(30, 10) {'graph_type': 'GM'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rng = np.random.default_rng(seed=50)\n",
     "num_trials = 100\n",
@@ -139,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instances[0]"
+    "cr_ratios"
    ]
   },
   {
