Updated Braverman, faster execution

--- a/notebooks/exp_box_plots.ipynb
+++ b/notebooks/exp_box_plots.ipynb
@@ -61,16 +61,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(seed=50)\n",
+    "rng = np.random.default_rng()\n",
     "num_trials = 100\n",
     "batch_size = 500\n",
-    "node_configs = EXPERIMENT_BASE_TESTING_REGIMES\n",
+    "node_configs = [(30, 10)]\n",
     "graph_configs = MAIN_TESTING_GRAPH_CONFIGS\n",
     "baselines_kwargs = {\n",
     "    'greedy': {},\n",
     "    'greedy_t': {'threshold': 0.35},\n",
-    "    'lp_rounding': {},\n",
-    "    'naor_lp_rounding': {}\n",
+    "    'lp_rounding': {'rng': rng},\n",
+    "    'naor_lp_rounding': {'rng': rng},\n",
+    "    'pollner_lp_rounding': {'rng': rng}\n",
     "}\n",
     "\n",
     "data = {node_config: {} for node_config in node_configs}\n",
@@ -89,12 +90,12 @@
     "            cr_ratios, _ = evaluate_model(\n",
     "                meta_model=None,\n",
     "                meta_model_type=None,\n",
-    "                base_models=[GNN],\n",
+    "                base_models=[],\n",
     "                instances=instances,\n",
     "                batch_size=batch_size,\n",
     "                rng=rng,\n",
-    "                num_realizations=5,\n",
-    "                baselines=['greedy', 'greedy_t', 'lp_rounding', 'naor_lp_rounding'],\n",
+    "                num_realizations=20,\n",
+    "                baselines=['greedy', 'greedy_t', 'lp_rounding', 'naor_lp_rounding', 'pollner_lp_rounding'],\n",
     "                **baselines_kwargs\n",
     "            )\n",
     "\n",
@@ -115,7 +116,7 @@
    "outputs": [],
    "source": [
     "results = {}\n",
-    "for graph_type, val in data[EXPERIMENT_BASE_TESTING_REGIMES[0]].items():\n",
+    "for graph_type, val in data[node_configs[0]].items():\n",
     "\tresults[graph_type] = val\n",
     "\n",
     "_box_plots(results, lambda graph_type: f\"GNN2_classify_{graph_type} {node_config[1]}x{node_config[0]}\")"
@@ -127,25 +128,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from algorithms import greedy, offline_opt\n",
-    "from util import _flip_coins\n",
-    "\n",
-    "rng = np.random.default_rng(seed=0)\n",
-    "instances = sample_instances(\n",
-    "    *(30, 10),\n",
-    "    100,\n",
-    "    rng,\n",
-    "    {},\n",
-    "    **MAIN_TESTING_GRAPH_CONFIGS[1]\n",
-    ")\n",
-    "vals = []\n",
-    "for instance in instances:\n",
-    "    vals2 = []\n",
-    "    for _ in range(5):\n",
-    "        coin_flips = _flip_coins(instance[1], rng)\n",
-    "        vals2.append(greedy(instance, coin_flips)[1] / offline_opt(instance[0], coin_flips)[1])\n",
-    "    vals.append(np.nanmean(vals2))\n",
-    "    "
+    "for label in ['greedy', 'greedy_t', 'lp_rounding', 'naor_lp_rounding', 'pollner_lp_rounding']:\n",
+    "    print(label)\n",
+    "    print(np.nanmean(results[\"{'graph_type': 'ER', 'p': 0.5, 'weighted': True}\"][label]))\n",
+    "    print(np.nanstd(results[\"{'graph_type': 'ER', 'p': 0.5, 'weighted': True}\"][label]))\n",
+    "    print(np.nanmax(results[\"{'graph_type': 'ER', 'p': 0.5, 'weighted': True}\"][label]))\n",
+    "    print(np.nanmin(results[\"{'graph_type': 'ER', 'p': 0.5, 'weighted': True}\"][label]))\n",
+    "    print()"
    ]
   },
   {
@@ -154,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.min(vals)"
+    "np.argmin(results[\"{'graph_type': 'ER', 'p': 0.5, 'weighted': True}\"]['pollner_lp_rounding'])"
    ]
   },
   {
@@ -163,7 +152,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cr_ratios"
+    "i = 52\n",
+    "evaluate_model(\n",
+    "    meta_model=None,\n",
+    "    meta_model_type=None,\n",
+    "    base_models=[],\n",
+    "    instances=instances[i:i+1],\n",
+    "    batch_size=batch_size,\n",
+    "    rng=rng,\n",
+    "    num_realizations=1,\n",
+    "    baselines=['pollner_lp_rounding'],\n",
+    "    **baselines_kwargs\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.hist(ratios, bins=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.672 * 0.97"
    ]
   },
   {
