Train models on different sizes

--- a/notebooks/gnn_trainer diff 3.ipynb
+++ b/notebooks/gnn_trainer diff 3.ipynb
@@ -99,7 +99,7 @@
     "    'hidden_dim':        32,\n",
     "    'output_dim':        1,\n",
     "    'dropout':           0.0306,\n",
-    "    'epochs':            20,\n",
+    "    'epochs':            64,\n",
     "    'opt':               'adagrad',\n",
     "    'opt_scheduler':     'none',\n",
     "    'opt_restart':       0,\n",
@@ -119,319 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating the dataset\n",
-      "Starting training\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:   0%|          | 0/20 [00:00<?, ?Epochs/s]/home/alexhay/.local/lib/python3.10/site-packages/torch_geometric/utils/scatter.py:93: UserWarning: The usage of `scatter(reduce='max')` can be accelerated via the 'torch-scatter' package, but it was not found\n",
-      "  warnings.warn(f\"The usage of `scatter(reduce='{reduce}')` \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.02727843415028079\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:   5%|▌         | 1/20 [00:48<15:29, 48.90s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST LOSS: 0.028020642697811127\n",
-      "TEST ACCURACY: 0.7389799952507019\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  10%|█         | 2/20 [01:24<12:21, 41.17s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.021636318412318948\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  15%|█▌        | 3/20 [02:00<10:55, 38.56s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.0202855965187696\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  20%|██        | 4/20 [02:36<10:01, 37.61s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.02002091770400503\n",
-      "TRAINING LOSS: 0.019367756890415762\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  25%|██▌       | 5/20 [03:25<10:25, 41.68s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST LOSS: 0.0411677211523056\n",
-      "TEST ACCURACY: 0.8147541284561157\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  30%|███       | 6/20 [04:01<09:17, 39.82s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.019179426140829632\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  35%|███▌      | 7/20 [04:52<09:25, 43.52s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.018905966044185134\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  40%|████      | 8/20 [05:30<08:19, 41.64s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.018744320228606764\n",
-      "TRAINING LOSS: 0.018453649518430478\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  45%|████▌     | 9/20 [06:18<08:02, 43.86s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST LOSS: 0.018149184063076973\n",
-      "TEST ACCURACY: 0.855009138584137\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  50%|█████     | 10/20 [06:54<06:52, 41.28s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.018292558408087838\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  55%|█████▌    | 11/20 [07:30<05:56, 39.57s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.018067336908910894\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  60%|██████    | 12/20 [08:06<05:08, 38.59s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.017760933029337716\n",
-      "TRAINING LOSS: 0.017721306457995627\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  65%|██████▌   | 13/20 [08:53<04:47, 41.09s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST LOSS: 0.01664130575954914\n",
-      "TEST ACCURACY: 0.8357012867927551\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  70%|███████   | 14/20 [09:27<03:53, 38.97s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.017522818963844482\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  75%|███████▌  | 15/20 [10:02<03:08, 37.75s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.017657701021082623\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  80%|████████  | 16/20 [10:36<02:27, 36.84s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.017431416704294572\n",
-      "TRAINING LOSS: 0.017381104912005688\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  85%|████████▌ | 17/20 [11:24<01:59, 39.92s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST LOSS: 0.014960127882659435\n",
-      "TEST ACCURACY: 0.8520947098731995\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  90%|█████████ | 18/20 [12:00<01:17, 38.94s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.017203836785775046\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:  95%|█████████▌| 19/20 [12:35<00:37, 37.58s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.01710178878838616\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training: 100%|██████████| 20/20 [13:07<00:00, 39.35s/Epochs]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING LOSS: 0.01706090768578136\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Generating the dataset\n"
      ]
     }
    ],
@@ -439,9 +127,9 @@
     "from params import BASE_MODEL_TRAIN_CONFIG\n",
     "train_config = BASE_MODEL_TRAIN_CONFIG\n",
     "### TODO REMOVE ###\n",
-    "# train_config['train_num'] = 1000\n",
-    "# train_config['val_num'] = 200\n",
-    "train_config['regimes'] = [(30,14)]\n",
+    "train_config['train_num'] = 2000\n",
+    "train_config['val_num'] = 300\n",
+    "train_config['regimes'] = [(25,15)]\n",
     "### END REMOVE ###\n",
     "print(\"Generating the dataset\")\n",
     "train_loader, val_loader = gen_train_input(train_config, args, seed=0)\n",
@@ -455,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save(GNN, args, 'GNN_exp_diff_30_14')"
+    "save(GNN, args, 'GNN_large_diff_25_15')"
    ]
   },
   {
