--- a/notebooks/gnn_trainer_parallel.ipynb
+++ b/notebooks/gnn_trainer_parallel.ipynb
@@ -412,6 +412,201 @@
      "text": [
       "TRAINING LOSS: 0.004515809560075539\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  62%|██████▎   | 20/32 [1:49:07<1:04:43, 323.62s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004602499381874488\n",
+      "TRAINING LOSS: 0.004659369071957988\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  66%|██████▌   | 21/32 [1:54:12<58:21, 318.28s/Epochs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.00512039614841342\n",
+      "TEST ACCURACY: 0.9398128390312195\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  69%|██████▉   | 22/32 [1:58:23<49:40, 298.07s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004442334295026266\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  72%|███████▏  | 23/32 [2:02:38<42:46, 285.19s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004532539224290507\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  75%|███████▌  | 24/32 [2:07:05<37:16, 279.61s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004474068683796036\n",
+      "TRAINING LOSS: 0.004542282434065191\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  78%|███████▊  | 25/32 [2:12:40<34:33, 296.28s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.005170309916138649\n",
+      "TEST ACCURACY: 0.9419395923614502\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  81%|████████▏ | 26/32 [2:16:58<28:27, 284.65s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.0045450381144935825\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  84%|████████▍ | 27/32 [2:21:12<22:58, 275.62s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004541892602892299\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  88%|████████▊ | 28/32 [2:25:31<18:02, 270.53s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004420435391648591\n",
+      "TRAINING LOSS: 0.004469050058076012\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  91%|█████████ | 29/32 [2:30:21<13:49, 276.43s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.004664055071771145\n",
+      "TEST ACCURACY: 0.9461930990219116\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  94%|█████████▍| 30/32 [2:34:30<08:56, 268.04s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004424924134741065\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  97%|█████████▋| 31/32 [2:38:32<04:20, 260.23s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.004389654338540578\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 32/32 [2:42:31<00:00, 304.75s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAINING LOSS: 0.0043998705000378785\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -430,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
